force-app/main/default/objects/Meta_de_Venta__c/Meta_de_Venta__c.object-meta.xml
<CustomObject>
    <label>Meta de Venta</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Meta de Venta</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Metas de Ventas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>