force-app/main/default/objects/Meta_de_Venta__c/fields/Asesor__c.field-meta.xml
<CustomField>
    <fullName>Asesor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asesor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Metas_de_Ventas</relationshipName>
    <type>Lookup</type>
</CustomField>