force-app/main/default/objects/Meta_de_Venta__c/fields/Cuota__c.field-meta.xml
<CustomField>
    <fullName>Cuota__c</fullName>
    <label>Cuota</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>