force-app/main/default/objects/Meta_de_Venta__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>Campo único para guardar el username + Año + Mes, para evitar valores duplicados en este objeto.</description>
    <label>UniqueKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>