force-app/main/default/objects/Meta_de_Venta__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Versión</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACCORD EXL-T</fullName>
            </value>
            <value>
                <fullName>CIVIC EX CVT</fullName>
            </value>
            <value>
                <fullName>CIVIC SI MT</fullName>
            </value>
            <value>
                <fullName>CIVIC TYPE R</fullName>
            </value>
            <value>
                <fullName>CR-V CITY PLUS 2WD</fullName>
            </value>
            <value>
                <fullName>CR-V EXL 1.5T 4WD</fullName>
            </value>
            <value>
                <fullName>CR-V PRESTIGE 2WD</fullName>
            </value>
            <value>
                <fullName>FIT EX CVT</fullName>
            </value>
            <value>
                <fullName>HR-V EX 2WD</fullName>
            </value>
            <value>
                <fullName>HR-V EXL PRESTIGE 2WD</fullName>
            </value>
            <value>
                <fullName>HR-V LX 2WD</fullName>
            </value>
            <value>
                <fullName>HR-V LX 2WD X-TYLE</fullName>
            </value>
            <value>
                <fullName>ODYSSEY EXLN-REST</fullName>
            </value>
            <value>
                <fullName>PILOT EXL 4WD</fullName>
            </value>
            <value>
                <fullName>PILOT EXL PRESTIGE 2WD</fullName>
            </value>
            <value>
                <fullName>WR-V LX CVT 2WD</fullName>
            </value>
            <value>
                <fullName>WR-V LX MT 2WD</fullName>
            </value>
            <value>
                <fullName>WR-V EX 2WD</fullName>
            </value>
            <value>
                <fullName>USADOS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>