force-app/main/default/objects/Meta_de_Venta__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asesor__c</columns>
    <columns>Cuota__c</columns>
    <columns>Version__c</columns>
    <columns>Mes__c</columns>
    <columns>Anio__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Asesor__c</field>
        <operation>contains</operation>
        <value>TERREROS</value>
    </filters>
    <label>Todos</label>
</ListView>